Actualización de datos y estilo + añadido de proyecto

--- a/src/app/features/navbar-home/navbar-home.component.html
+++ b/src/app/features/navbar-home/navbar-home.component.html
@@ -18,11 +18,11 @@
         </li>
       </ul>
       
-      <a class="contact" href="https://www.instagram.com/sebas_camayo2002/" target="_blank">
+      <a class="contact" href="https://www.instagram.com/sebaskmayo/" target="_blank">
         <img src="assets/svg/instagram.svg" alt="instagram" class="link_Img" >
       </a>
   
-      <a class="contact" href="https://www.linkedin.com/in/sebasti%C3%A1n-camayo-ramos/" target="_blank">
+      <a class="contact" href="https://www.linkedin.com/in/sebastian-camayo-ramos/" target="_blank">
         <img src="assets/svg/linkedin.svg" alt="instagram" class="link_Img" >
       </a>
   
