--- a/src/app/features/navbar-home/navbar-home.component.css
+++ b/src/app/features/navbar-home/navbar-home.component.css
@@ -1,5 +1,5 @@
 * {
-    background-color: #0e141b;
+    background-color: #2F4550;
 }
 
 li, a, button {
@@ -101,7 +101,7 @@ ul {
     border-radius: 20%;
 }
 
-@media (max-width: 600px) {
+@media (max-width: 700px) {
 
     .nav_bar {
         flex-direction: column;
@@ -119,7 +119,7 @@ ul {
     .responsive_navbar {
         display: flex;
         flex-direction: column;
-        background-color: #0e141b;
+        background-color: #2F4550;
     }
 
     .responsive_icons {
