Cambios en los links

--- a/src/app/features/multiplayer-game/multiplayer-game.component.html
+++ b/src/app/features/multiplayer-game/multiplayer-game.component.html
@@ -1,7 +1,7 @@
 <div class="information">
 
     <div class="back_button">
-        <a [routerLink]="['home']"> 
+        <a [routerLink]="['']"> 
             <img src="assets/svg/arrow-back.svg" alt=""> De vuelta al inicio
         </a>
     </div>
